<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/fundocontatoapp"
    tools:context=".telaContatos">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:text="@string/textHeadingContatos"
        android:fontFamily="sans-serif-black"
        android:textSize="25sp"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:layout_gravity="center"
        android:layout_marginTop="150dp"
        android:text="@string/email"/>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:text="@string/whats"/>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:text="@string/linkedin"
        android:textColorLink="@color/black"/>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:text="@string/github"
        android:linksClickable="true"
        android:textColorLink="@color/black"/>

    <Button
        android:id="@+id/button4"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="200dp"
        android:text="@string/textButton"
        android:textColor="@color/black"
        android:backgroundTint="@color/white"/>
</LinearLayout>