<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/fundoprojetoapp"
    tools:context=".telaProjetos">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:text="@string/textHeadingProjetos"
        android:fontFamily="sans-serif-black"
        android:textSize="25sp"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="150dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textColorLink="@color/black"
        android:textSize="16sp"
        android:text="@string/proj1" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textColorLink="@color/black"
        android:textSize="16sp"
        android:text="@string/proj2" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textColorLink="@color/black"
        android:textSize="16sp"
        android:text="@string/proj3" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textColorLink="@color/black"
        android:textSize="16sp"
        android:text="@string/proj4" />

    <Button
        android:id="@+id/button3"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="200dp"
        android:text="@string/textButton"
        android:textColor="@color/white"
        android:backgroundTint="@color/black"/>
</LinearLayout>